test/corpus/lists.txt
================================================================================
Simple list literal
================================================================================

xs = [1, 2, 3:Int]

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (list_literal
                lbrack: (lbrack)
                head: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (integer)))))
                comma: (comma)
                tail: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (integer)))))
                comma: (comma)
                tail: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (integer)))))
                colon: (colon)
                type: (type_expr
                  left: (type_sum_or_primary
                    (type_primary
                      (type_identifier))))
                rbrack: (rbrack))))))))
  (newline))

================================================================================
Nested list literal
================================================================================

xss = [[1, 2:Int], [3, 4:Int]:[Int]]

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (list_literal
                lbrack: (lbrack)
                head: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (list_literal
                          lbrack: (lbrack)
                          head: (expr
                            (infix_expression
                              left: (application_or_primary
                                (term_primary
                                  (integer)))))
                          comma: (comma)
                          tail: (expr
                            (infix_expression
                              left: (application_or_primary
                                (term_primary
                                  (integer)))))
                          colon: (colon)
                          type: (type_expr
                            left: (type_sum_or_primary
                              (type_primary
                                (type_identifier))))
                          rbrack: (rbrack))))))
                comma: (comma)
                tail: (expr
                  (infix_expression
                    left: (application_or_primary
                      (term_primary
                        (list_literal
                          lbrack: (lbrack)
                          head: (expr
                            (infix_expression
                              left: (application_or_primary
                                (term_primary
                                  (integer)))))
                          comma: (comma)
                          tail: (expr
                            (infix_expression
                              left: (application_or_primary
                                (term_primary
                                  (integer)))))
                          colon: (colon)
                          type: (type_expr
                            left: (type_sum_or_primary
                              (type_primary
                                (type_identifier))))
                          rbrack: (rbrack))))))
                colon: (colon)
                type: (type_expr
                  left: (type_sum_or_primary
                    (type_primary
                      (type_list_brackets
                        lbrack: (lbrack)
                        type: (type_expr
                          left: (type_sum_or_primary
                            (type_primary
                              (type_identifier))))
                        rbrack: (rbrack)))))
                rbrack: (rbrack))))))))
  (newline))

================================================================================
List case expression (lcase)
================================================================================

length = fun xs : [Int], lcase xs of
    | nil => 0
    | cons x xs => 1

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_list_brackets
                  lbrack: (lbrack)
                  type: (type_expr
                    left: (type_sum_or_primary
                      (type_primary
                        (type_identifier))))
                  rbrack: (rbrack)))))
          comma: (comma)
          body: (expr
            (lcase_expression
              lcase: (kw_lcase)
              scrutinee: (expr
                (infix_expression
                  left: (application_or_primary
                    (term_primary
                      (term_identifier)))))
              of: (kw_of)
              (newline)
              (lcase_arm
                bar: (bar)
                nil: (kw_nil)
                arrow: (fat_arrow)
                body: (maybe_expr
                  (expr
                    (infix_expression
                      left: (application_or_primary
                        (term_primary
                          (integer)))))))
              (newline)
              (lcase_arm
                bar: (bar)
                cons: (kw_cons)
                head: (term_identifier_or_hole)
                tail: (term_identifier_or_hole)
                arrow: (fat_arrow)
                body: (maybe_expr
                  (expr
                    (infix_expression
                      left: (application_or_primary
                        (term_primary
                          (integer)))))))
              (newline))))))))

================================================================================
List builtins (nil and cons)
================================================================================

empty = nil Int
single = cons 1 (nil Int)

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (nil_term
                nil: (kw_nil)
                type: (type_primary
                  (type_identifier)))))))))
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (application
              function: (application_or_primary
                (application
                  function: (application_or_primary
                    (term_primary
                      (term_identifier)))
                  argument: (app_argument
                    (term_primary
                      (integer)))))
              argument: (app_argument
                (term_primary
                  (term_parens
                    lparen: (lparen)
                    term: (expr
                      (infix_expression
                        left: (application_or_primary
                          (term_primary
                            (nil_term
                              nil: (kw_nil)
                              type: (type_primary
                                (type_identifier)))))))
                    rparen: (rparen))))))))))
  (newline))
