test/corpus/sum_types.txt
================================================================================
Sum type in type signature
================================================================================

unwrap : (Unit + Int) -> Int

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          (type_primary
            (type_parens
              lparen: (lparen)
              type: (type_expr
                left: (type_sum_or_primary
                  left: (type_primary
                    (type_identifier))
                  plus: (plus)
                  right: (type_primary
                    (type_identifier))))
              rparen: (rparen))))
        arrow: (arrow)
        right: (type
          (type_expr
            left: (type_sum_or_primary
              (type_primary
                (type_identifier))))))))
  (newline))

================================================================================
Sum type in value signature (top-level)
================================================================================

result : Int + Bool

--------------------------------------------------------------------------------

(source_file
  (newline)
  (declaration
    name: (term_identifier)
    colon: (colon)
    type: (type
      (type_expr
        left: (type_sum_or_primary
          left: (type_primary
            (type_identifier))
          plus: (plus)
          right: (type_primary
            (type_identifier))))))
  (newline))

================================================================================
Case expression with sum type
================================================================================

unwrap = fun opt : Unit + Int, case opt of
    | inl x => 0
    | inr n => n

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (fun_expression
          fun: (kw_fun)
          param: (term_identifier_or_hole)
          colon: (colon)
          type: (type_expr
            left: (type_sum_or_primary
              left: (type_primary
                (type_identifier))
              plus: (plus)
              right: (type_primary
                (type_identifier))))
          comma: (comma)
          body: (expr
            (case_expression
              case: (kw_case)
              scrutinee: (expr
                (infix_expression
                  left: (application_or_primary
                    (term_primary
                      (term_identifier)))))
              of: (kw_of)
              (newline)
              (case_arm
                bar: (bar)
                ctor: (kw_inl)
                binder: (term_identifier_or_hole)
                arrow: (fat_arrow)
                body: (maybe_expr
                  (expr
                    (infix_expression
                      left: (application_or_primary
                        (term_primary
                          (integer)))))))
              (newline)
              (case_arm
                bar: (bar)
                ctor: (kw_inr)
                binder: (term_identifier_or_hole)
                arrow: (fat_arrow)
                body: (maybe_expr
                  (expr
                    (infix_expression
                      left: (application_or_primary
                        (term_primary
                          (term_identifier)))))))
              (newline))))))))

================================================================================
Inl constructor
================================================================================

result = inl [: Char] (Unit, [Char])

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (injection
                ctor: (kw_inl)
                value: (term_primary
                  (list_literal
                    lbrack: (lbrack)
                    colon: (colon)
                    type: (type_expr
                      left: (type_sum_or_primary
                        (type_primary
                          (type_identifier))))
                    rbrack: (rbrack)))
                type: (type_primary
                  (type_prod
                    lparen: (lparen)
                    left: (type_expr
                      left: (type_sum_or_primary
                        (type_primary
                          (type_identifier))))
                    comma: (comma)
                    right: (type_expr
                      left: (type_sum_or_primary
                        (type_primary
                          (type_list_brackets
                            lbrack: (lbrack)
                            type: (type_expr
                              left: (type_sum_or_primary
                                (type_primary
                                  (type_identifier))))
                            rbrack: (rbrack)))))
                    rparen: (rparen))))))))))
  (newline))

================================================================================
Inr constructor
================================================================================

result = inr 42 Unit

--------------------------------------------------------------------------------

(source_file
  (newline)
  (value_definition
    name: (term_identifier)
    equals: (equals)
    value: (maybe_expr
      (expr
        (infix_expression
          left: (application_or_primary
            (term_primary
              (injection
                ctor: (kw_inr)
                value: (term_primary
                  (integer))
                type: (type_primary
                  (type_identifier)))))))))
  (newline))
